syntax = "proto3";

option go_package = "microservices/playlists/proto";

message CreatePlaylistOptions {
  int64 UserID = 1;
  string Title = 2;
}

message UpdatePlaylistOptions {
  int64 PlaylistID = 1;
  string Title = 2;
}

message DeletePlaylistOptions {
  int64 PlaylistID = 1;
}

message GetUserPlaylistsOptions {
  int64 UserID = 1;
}

message AddTrackOptions {
  int64 PlaylistID = 1;
  int64 TrackID = 2;
  int64 UserID = 3;
}

message CreatePlaylistResponse {
  int64 PlaylistID = 1;
}

message UpdatePlaylistResponse {}

message DeletePlaylistResponse {}

message Playlist {
  int64 PlaylistID = 1;
  string Title = 2;
  string Artwork = 3;
}
message GetUserPlaylistsResponse {
  repeated Playlist Playlists = 1;
}

message AddTrackResponse {}

service Playlists {
  rpc CreatePlaylist(CreatePlaylistOptions) returns(CreatePlaylistResponse) {}
  rpc UpdatePlaylist(UpdatePlaylistOptions) returns(UpdatePlaylistResponse) {}
  rpc DeletePlaylist(DeletePlaylistOptions) returns(DeletePlaylistResponse) {}
  rpc GetUserPlaylists(GetUserPlaylistsOptions) returns(GetUserPlaylistsResponse) {}
  rpc AddTrack(AddTrackOptions) returns(AddTrackResponse) {}
}